# lethical_lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: discrimination.html  discrimination.md  main.html  main.md
lethai/: __init__.py  gender_tag_dataset.py  nlg.py  nlp.py
lethai/public/: nlg.html  nlg.js  nlg_json.js  styles.css
lethai/utils/: __init__.py  api_response_handler.py
tests/: test_lethical_ai.py
