[tool.poetry]
name = "lethai"
version = "0.0.2"
description = "Lethical AI python library."
authors = ["Amanl04 <amanlodha423@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
