[tool.poetry]
name = "lethai"
version = "0.0.7"
description = "Lethical AI python library"
authors = ["Amanl04 <amanlodha423@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.25.0"
numpy = "^1.19.4"
transformers = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pdoc3 = "^0.9.2"
torch = "^1.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
